fix (configs maps) fix progressbar z-index

--- a/src/app/configs/config-editor/config-editor.component.scss
+++ b/src/app/configs/config-editor/config-editor.component.scss
@@ -12,6 +12,7 @@
     top: 0px;
     border-radius: none;
     background: none!important;
+    z-index: 1;
     .progressbar {
       background: $primary!important;
     }
